WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124170
[Win] m_isCompositeFontReference uninitialized on Windows
https://bugs.webkit.org/show_bug.cgi?id=124170
Summary
[Win] m_isCompositeFontReference uninitialized on Windows
Brent Fulgham
Reported
2013-11-11 15:58:46 PST
The constructors for the various flavors of Windows builds do not initialize m_isCompositeFontReference (which was added in
r112816
). This patch corrects this oversight.
Attachments
Patch
(2.64 KB, patch)
2013-11-11 16:00 PST
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2013-11-11 16:00:57 PST
Created
attachment 216618
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2013-11-11 16:02:00 PST
<
rdar://problem/15442835
>
WebKit Commit Bot
Comment 3
2013-11-11 16:31:18 PST
Comment on
attachment 216618
[details]
Patch Clearing flags on attachment: 216618 Committed
r159081
: <
http://trac.webkit.org/changeset/159081
>
WebKit Commit Bot
Comment 4
2013-11-11 16:31:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug