[Win] m_isCompositeFontReference is uninitialized. https://bugs.webkit.org/show_bug.cgi?id=124170

Reviewed by Tim Horton.

Initialize value to false, as is done in the other constructors for this data type.

* platform/graphics/win/FontPlatformDataCGWin.cpp:
(WebCore::FontPlatformData::FontPlatformData):
* platform/graphics/win/FontPlatformDataCairoWin.cpp:
(WebCore::FontPlatformData::FontPlatformData):
* platform/graphics/win/FontPlatformDataWin.cpp:
(WebCore::FontPlatformData::FontPlatformData):


Canonical link: https://commits.webkit.org/142370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159081 268f45cc-cd09-0410-ab3c-d52691b4dbfc